# middleware/authMiddleware.js
@@ -1,8 +1,10 @@
-ensureAuthenticated = (req, res, next) => {
+const e = require("express");
+
+const ensureAuthenticated = (req, res, next) => {
         if (req.isAuthenticated()) {
             return next();
         }
-        res.redirect('/login');
+        res.status(401).json({error: `You are not logged in`});
     };
 
 module.exports = {
