# routes/user.js
@@ -16,7 +16,13 @@ router.get("/login", userControllers.login);
 
 router.get("/auth/google", passport.authenticate('google', { scope: ['profile', 'email'] }));
 
-router.get('/auth/google/callback', passport.authenticate('google', { failureRedirect: '/login' }), userControllers.googleAuthCallback);
+router.get('/auth/google/callback',
+ passport.authenticate('google', { failureRedirect: '/login' }),
+ (req, res) => {
+     res.json({ message: 'Login successful!' });
+ }
+);
+
 
 module.exports = router;
 
